refactor: streamline user retrieval and enhance phone number validation logic
Signed-off-by: kabi175 <kabilan.mee@gmail.com>